# diskann-to-rust

./: CONTRIBUTING.md  DISKANN_RUST_TESTING_REPORT.md  QUICK_TESTING_GUIDE.md  README.md  TASK6_SUMMARY.md  TASK9_SUMMARY.md
.github/: copilot-instructions.md
.github/workflows/: demo-ci.yml  nightly-fuzz.yml  rust-ci.yml
DiskANNInRust/: .gitignore  ARM64.md  Cargo.toml  DEMO_GUIDE.md  README.md  SIMD_AUDIT.md  demo_output.txt  deny.toml  sbom.json
DiskANNInRust/diskann-bench/: Cargo.toml
DiskANNInRust/diskann-bench/benches/: search_benchmarks.rs
DiskANNInRust/diskann-cli/: Cargo.toml
DiskANNInRust/diskann-cli/src/: main.rs
DiskANNInRust/diskann-core/: Cargo.toml
DiskANNInRust/diskann-core/benches/: core_benchmarks.rs
DiskANNInRust/diskann-core/src/: alignment.rs  error.rs  lib.rs  math.rs  simd.rs  structures.rs  utils.rs  vectors.rs
DiskANNInRust/diskann-core/tests/: property_tests.proptest-regressions  property_tests.rs  simd_correctness.rs
DiskANNInRust/diskann-demo/: Cargo.toml
DiskANNInRust/diskann-demo/src/: dataset.rs  demo.rs  embeddings.rs  main.rs  model.rs
DiskANNInRust/diskann-ffi/: Cargo.toml
DiskANNInRust/diskann-ffi/src/: lib.rs
DiskANNInRust/diskann-impl/: Cargo.toml
DiskANNInRust/diskann-impl/benches/: impl_benchmarks.rs
DiskANNInRust/diskann-impl/src/: graph.rs  lib.rs  optimized.rs  search.rs
DiskANNInRust/diskann-impl/tests/: beam_search_integration.rs  loom_tests.rs
DiskANNInRust/diskann-io/: Cargo.toml
DiskANNInRust/diskann-io/benches/: io_benchmarks.rs
DiskANNInRust/diskann-io/src/: disk_index.rs  file.rs  format.rs  lib.rs  loader.rs  mmap.rs  serialization.rs  writer.rs
DiskANNInRust/diskann-io/tests/: property_tests.rs  round_trip_tests.rs
DiskANNInRust/diskann-traits/: Cargo.toml
DiskANNInRust/diskann-traits/src/: distance.rs  index.rs  lib.rs  search.rs
DiskANNInRust/docs/: book.toml  demo_text_embedding.md
DiskANNInRust/docs/assets/: README.md  cli_output_example.txt
DiskANNInRust/docs/book/: 404.html  index.html  print.html  searchindex.js  toc.html  toc.js
DiskANNInRust/docs/book/architecture/: beam-search.html  components.html  overview.html  simd.html  vamana.html
DiskANNInRust/docs/book/development/: benchmarking.html  contributing.html  profiling.html  testing.html
DiskANNInRust/docs/book/examples/: batch.html  build-index.html  ffi.html  search.html
DiskANNInRust/docs/book/features/: flags.html  memory.html  performance.html  safety.html
DiskANNInRust/docs/book/reference/: api.html  errors.html  formats.html  performance.html
DiskANNInRust/docs/book/user-guide/: api.html  cli.html  getting-started.html  installation.html
DiskANNInRust/docs/src/: SUMMARY.md  introduction.md
DiskANNInRust/docs/src/architecture/: beam-search.md  overview.md  simd.md  vamana.md
DiskANNInRust/docs/src/examples/: build-index.md  ffi.md  search.md
DiskANNInRust/docs/src/features/: flags.md  performance.md  safety.md
DiskANNInRust/docs/src/user-guide/: api.md  getting-started.md
DiskANNInRust/docs/theme/: custom.css
DiskANNInRust/fuzz/: Cargo.toml
DiskANNInRust/fuzz/fuzz_targets/: fuzz_file_parser.rs  fuzz_search_query.rs  fuzz_vector_ops.rs
DiskANNInRust/perf_reports/: benchmark_results.txt  performance_summary.md
DiskANNInRust/scripts/: flamegraph_analysis.sh  perf_baseline.sh  prepare-release.sh
examples/: .gitignore  README.md  STSB_DEMO_RESULTS.md  build_stsb_index.sh  demo_quick.py  make_msmarco_embeddings.py  query_demo.py  requirements.txt  stsb_demo.py  stsb_disk_demo.py  stsb_search.py  test_integration.py
