[workspace]
resolver = "2"
members = [
    "diskann-core",
    "diskann-io", 
    "diskann-traits",
    "diskann-impl",
    "diskann-cli",
    "diskann-ffi",
    "diskann-bench",
]
exclude = [
    "fuzz",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["DiskANN Rust Port Working Group"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atsentia/diskann-to-rust"
homepage = "https://github.com/atsentia/diskann-to-rust"
keywords = ["ann", "nearest-neighbor", "vector-search", "simd"]
categories = ["algorithms", "data-structures", "science"]

[workspace.dependencies]
# Core dependencies that will be shared across crates
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# SIMD dependencies
wide = "0.7"

# Parallel processing
rayon = "1.8"

# Random number generation
rand = "0.8"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Testing
rstest = "0.18"

# Property-based testing
proptest = "1.0"

# Concurrency testing
loom = "0.7"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]