[package]
name = "diskann-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core DiskANN dependencies
diskann-core = { path = "../diskann-core" }
diskann-impl = { path = "../diskann-impl" }
diskann-traits = { path = "../diskann-traits" }
diskann-io = { path = "../diskann-io" }

# CLI and async runtime
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }

# HTTP client for downloading
reqwest = { version = "0.11", features = ["json", "blocking"] }

# JSON parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Progress bars and colored output
indicatif = "0.17"
colored = "2.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# ONNX Runtime for real embeddings
ort = { version = "2.0.0-rc.2", features = ["download-binaries"] }
ndarray = "0.15"
tokenizers = { version = "0.15", default-features = false, features = ["onig"] }

# For downloading models
ureq = { version = "2.9", features = ["json"] }
flate2 = "1.0"
tar = "0.4"

# Random for initialization
rand = "0.8"

# Timing
chrono = "0.4"

# Parallel processing
rayon = "1.8"

[[bin]]
name = "diskann-demo"
path = "src/main.rs"