[package]
name = "diskann-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "I/O operations and file format handling for DiskANN"

[features]
default = ["mmap"]
mmap = ["dep:memmap2"]
simd = ["diskann-core/simd"]
unsafe_opt = ["diskann-core/unsafe_opt"]
wasm = ["diskann-core/wasm"]

[dependencies]
diskann-core = { path = "../diskann-core" }
diskann-traits = { path = "../diskann-traits" }
serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

# Memory-mapped I/O - optional for platforms that don't support it
memmap2 = { version = "0.9", optional = true }

[dev-dependencies]
criterion.workspace = true
rstest.workspace = true
proptest.workspace = true
tempfile = "3.0"
bytemuck = "1.0"

[[bench]]
name = "io_benchmarks"
harness = false
required-features = []